# clay

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml
backend/: .env  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_e2_ingestion_baseline.py  0003_add_demo_trade_records.py  0004_add_review_feedback.py  0007_add_incident_lifecycle.py  0008_ops_runtime_state.py  0009_context_unique_dedup.py  0010_e2_source_in_identity.py  0012_rename_ops_indexes.py  0013_create_missing_indexes.py  0014_hypertable_indexes.py  0015_ai_agent_runs.py  0016_provider_pool.py  0017_demo_open_session_uniq.py  0018_demo_advisory_size_pct.py  0019_ai_agent_runs_indexes.py  0020_demo_trade_source.py  0021_execution_overrides.py  0023_knowledge_external_id.py  0024_execution_proof_decisions.py  0025_execution_proof_semantic_hash.py  0026_order_ledger_schema.py  0027_reconcile_bookmark.py  0028_halt_latch.py  0029_market_bars_compression.py  0030_market_bars_retention.py  0031_market_bars_continuous_aggregate.py  df9cf24f3af4_widen_knowledge_source_type_to_64.py
backend/docs/: execution.md
backend/scripts/: parity_check_config.py  reconcile_apply.py  reconcile_shadow.py  seed_demo_signal_data.py  seed_provider_pool.py  seed_provider_pool_s43a.py  smoke_bybit_demo.py  smoke_testnet_execution.py
backend/scripts/eval/: knowledge_ablation.py  knowledge_ablation_llm.py  m278_full_ablation.py  m278_scan.py
backend/src/clay/: __main__.py  bootstrap.py
backend/tests/: conftest.py
backend/tests/ai_control/: test_ai_control_persistence.py  test_ai_control_service.py  test_apply_live.py  test_config_reconciler.py  test_config_writer.py  test_provider_pool.py  test_routing_client.py  test_runner.py
backend/tests/alpha/: test_alpha_readiness_service.py
backend/tests/api/: test_ai_control_api.py  test_ai_control_stream.py  test_configs_api.py  test_control_center_api.py  test_control_center_stream.py  test_demo_trading_api.py  test_demo_trading_stream.py  test_entrypoint.py  test_events_api.py  test_execution_probe.py  test_health_api.py  test_health_ready.py  test_ingestion_api.py  test_ingestion_route.py  test_knowledge_api.py  test_knowledge_stream.py  test_lifespan.py  test_override_api.py  test_reliability_api.py  test_reliability_stream.py  test_runtime_api.py  test_services_api.py  test_session_control_api.py  test_session_review_api.py  test_session_review_stream.py  test_session_stream.py  test_signals_api.py  test_validation_lab_api.py  test_validation_lab_stream.py  test_workspace_api.py  test_workspace_stream.py
backend/tests/config/: test_loader.py
backend/tests/core/: test_clock.py  test_clock_determinism.py  test_logging.py
backend/tests/db/: test_context_repositories_dedup.py  test_execution_overrides.py  test_ingestion_repositories.py  test_ingestion_schema.py  test_market_bars_compression_migration.py  test_market_bars_continuous_aggregate_migration.py  test_market_bars_retention_migration.py  test_migration_contracts.py  test_order_ledger_migration.py  test_proof_decisions.py  test_runtime_state_repositories.py
backend/tests/demo_trading/: test_demo_source.py  test_demo_source_scope.py  test_demo_trading_service.py
backend/tests/execution/: conftest.py  test_binance_testnet.py  test_degraded_probe.py  test_execution_config.py  test_execution_matrix.py  test_guards.py  test_live_client.py  test_override_service.py  (+1 more)
(+492 files in other folders)
