[project]
name = "clay-backend"
version = "0.1.0"
description = "Local control plane for Clay"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "alembic>=1.14,<2.0",
  "apscheduler>=3.10,<4.0",
  "ccxt>=4.3,<5.0",
  "fastapi>=0.115,<0.116",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "ruamel-yaml>=0.18,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
  "asgi-lifespan>=2.0,<3.0",
  "httpx>=0.27,<0.28",
  "pyright>=1.1.411",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff==0.15.16",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clay"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "slow: slow tests not run in CI",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint.per-file-ignores]
# alembic/env.py импортит clay-модули ПОСЛЕ load_dotenv(), чтобы IngestionSettings
# видел .env. Не-инвазивно: глушим E402 и F401 (side-effect imports для metadata)
# точечно, не переписывая env.py.
"alembic/env.py" = ["E402", "F401"]
# tests/conftest.py: side-effect imports (модели регистрируются в Base.metadata),
# E402 по design (DB URL setup precedes clay imports).
"tests/conftest.py" = ["E402", "F401"]

[tool.ruff.format]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/__pycache__", ".venv"]
